manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house-cup
  namespace: house-cup
spec:
  type: LoadBalancer
  selector: { app: house-cup }
  ports: [{ port: 80, targetPort: 8080 }]
